[package]
name = "marketplace_principal"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }


[dev-dependencies]
# ink_e2e = { version = "5.0.0" } # Asegúrate de que esta línea esté comentada o eliminada

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []
__ink_dylint_Constructor = []
__ink_dylint_Storage = []
